<resources>
    <string name="app_name">Muzica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_cover_image">Song Cover Image</string>
    <string name="play_pause">Play - Pause</string>
    <string name="this_is_artist_name">This Is Artist Name</string>
    <string name="this_is_song_title">This Is Song Title</string>
    <string name="song_cover">Song Cover</string>
    <string name="album_cover">Album Cover</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By:</string>
    <string name="by_nam">By Nam</string>
    <string name="by_name">By Name</string>
    <string name="by_size">By Size</string>
    <string name="by_date">By Date</string>
</resources>