<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        app:showAsAction="never"
        android:title="@string/sort_by">

        <menu>

            <item
                android:id="@+id/by_name_menu"
                android:title="@string/by_name"
                app:showAsAction="never"/>

            <item
                android:id="@+id/by_size_menu"
                android:title="@string/by_size"
                app:showAsAction="never"/>

            <item
                android:id="@+id/by_date_menu"
                android:title="@string/by_date"
                app:showAsAction="never"/>

        </menu>

    </item>
</menu>